traces/bug_192.txt
examples++-load/qf11to25.cpp:141: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of QuadratureFormular_T_11 accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/qf11to25.cpp:141:1: initialization of QuadratureFormular_T_11
139.   QuadraturePoint(0.1744377829182/2,0.3430183498147,0.3430183498147),
140.   };
141. > const QuadratureFormular QuadratureFormular_T_11(11 ,28,P_QuadratureFormular_T_11);
142.   
143.   

examples++-load/qf11to25.cpp:141:26: call to Fem2D::GQuadratureFormular<Fem2D::R2>_GQuadratureFormular
139.   QuadraturePoint(0.1744377829182/2,0.3430183498147,0.3430183498147),
140.   };
141.   const QuadratureFormular QuadratureFormular_T_11(11 ,28,P_QuadratureFormular_T_11);
                                ^
142.   
143.   

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R2>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
